--- a/App/angular.json
+++ b/App/angular.json
@@ -23,7 +23,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/jquery/dist/jquery.js",
+              "src/assets/ejemplo.js"
             ],
             "scripts": []
           },
